[tool.poetry]
name = "contextno-bot"
version = "0.1.0"
description = ""
authors = ["PolinaLack <polina.lack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
aiogram = "^3.6.0"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
dispatcher = "^1.0"
redis = "^5.0.4"
setuptools = "^70.0.0"
cachetools = "^5.3.3"
redis-cli = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
